Added commas to profit output, and rounded decimals
Changed output to add decimals to differentiate the thousands position. Also fixed up file naming confusion relating to the background.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p {
 }
 
 body {
-    background-image: url('img/background2.png');
+    background-image: url('img/background.png');
     background-size: cover;
     background-color: #b9a232;
     background-position: center;
